Added footer widget zones to admin control

--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/WidgetZone.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/WidgetZone.cshtml
@@ -163,9 +163,20 @@
                     ]
                 },
                 {
+                    text: "Footer", children: [
+                        'footer_top',
+                        'footer_bottom',
+                        'footer_col_1_after',
+                        'footer_col_1_before',
+                        'footer_col_2_after',
+                        'footer_col_2_before',
+                        'footer_col_3_after',
+                        'footer_col_3_before'
+                    ]
+                },
+                {
                     text: "@T("Common.Misc")", children: [
                         'compareproducts_row',
-                        'footer',
                         'contactus_top',
                         'contactus_bottom',
                         'searchbox',
