--- a/src/Presentation/SmartStore.Web/Views/Common/Partials/Footer.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Common/Partials/Footer.cshtml
@@ -31,6 +31,8 @@
 	var invserseFooter = GetThemeVariable<bool>("inverse-footer");
 }
 
+@{ Html.RenderWidget("footer_top"); }
+
 @if (Model.ShowSocialLinks && socialLinks.Any())
 {
 	<div class="footer-social-wrapper">
@@ -216,7 +218,7 @@
 	</div>
 </div>
 
-@{ Html.RenderWidget("footer"); }
+@{ Html.RenderWidget("footer_bottom"); }
 
 <div class="footer-bottom-wrapper">
 	<div class="container footer-bottom">
