--- a/src/Plugins/SmartStore.AmazonPay/Views/AmazonPay/Configure.cshtml
+++ b/src/Plugins/SmartStore.AmazonPay/Views/AmazonPay/Configure.cshtml
@@ -1,5 +1,6 @@
 ﻿@using SmartStore.Web.Framework;
 @using SmartStore.AmazonPay.Models;
+@using SmartStore.AmazonPay;
 @model ConfigurationModel
 @{
     Layout = "";
@@ -435,27 +436,29 @@
 	<input type="hidden" name="source" value="SPPL" />
 </form>
 
-<div id="register-now-dialog">
-	<div class="modal modal-large hide fade" tabindex="-1">
-		<div class="modal-header">
-			<button type="button" class="close" data-dismiss="modal"><b>&#215;</b></button>
-			<h4 class="caption">
-				@T("Plugins.Payments.AmazonPay.PasteAccessData")
-			</h4>
-		</div>
-		<div class="modal-body">
-			<div class="form-group">
-				<textarea id="amazon-access-data" rows="12" class="form-control" style="width: 98%;" placeholder="@T("Plugins.Payments.AmazonPay.PasteAccessData.Hint")"></textarea>
+<form id="access-data-form" method="POST" action="@Url.Action("SaveAccessData", "AmazonPay", new { area = AmazonPayPlugin.SystemName })">
+	<div id="register-now-dialog">
+		<div class="modal modal-large hide fade" tabindex="-1">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal"><b>&#215;</b></button>
+				<h4 class="caption">
+					@T("Plugins.Payments.AmazonPay.PasteAccessData")
+				</h4>
+			</div>
+			<div class="modal-body">
+				<div class="form-group">
+					<textarea id="amazon-access-data" name="accessData" rows="12" class="form-control" style="width: 98%;" placeholder="@T("Plugins.Payments.AmazonPay.PasteAccessData.Hint")"></textarea>
+				</div>
+			</div>
+			<div class="modal-footer">
+				<button id="amazon-save-access-data" type="submit" class="btn btn-primary" disabled="disabled">
+					@T("Plugins.Payments.AmazonPay.SaveAccessData")
+				</button>
+				<button class="btn" data-dismiss="modal">@T("Common.Cancel")</button>
 			</div>
 		</div>
-		<div class="modal-footer">
-			<button class="btn btn-primary" data-dismiss="modal" disabled="disabled">
-				@T("Plugins.Payments.AmazonPay.SaveAccessData")
-			</button>
-			<button class="btn" data-dismiss="modal">@T("Common.Cancel")</button>
-		</div>
 	</div>
-</div>
+</form>
 
 <script type="text/javascript">
 	jQuery(document).ready(function () {
@@ -492,25 +495,28 @@
 
 		// Register now
 		$('a.register-now').click(function () {
+			$('button.paste-access-data').trigger('click');
 			$('#register-now-form').submit();
+		});
+
+		// Save access data
+		$('#amazon-save-access-data').click(function () {
+			$('#access-data-form').submit();
 		});
 
 		// Paste access data
 		$('button.paste-access-data').click(function () {
-			var dialog = $('#register-now-dialog');
-			$('#amazon-access-data').trigger('change');
+			//$('#amazon-access-data').trigger('change');
+			$('#register-now-dialog').find('.modal').modal('show');
 
-			dialog.find('.btn-primary').click(function (e) {
-				// TODO
-			});
-
-			dialog.find('.modal').modal('show');
+			setTimeout(function () {
+				$('#amazon-access-data').focus();
+			}, 800);
 		});
 
-		// Textarea access data changed
-		$('#amazon-access-data').change(function () {
+		// Keyup in access data textarea
+		$('#amazon-access-data').keyup(function () {
 			$('#register-now-dialog').find('.btn-primary').prop('disabled', $(this).val().length == 0);
 		});
-
 	});
 </script>
