--- a/src/Plugins/SmartStore.AmazonPay/Views/AmazonPayCheckout/ShippingAddress.cshtml
+++ b/src/Plugins/SmartStore.AmazonPay/Views/AmazonPayCheckout/ShippingAddress.cshtml
@@ -1,9 +1,10 @@
 ﻿@using SmartStore.Web.Models.Checkout;
 @model SmartStore.AmazonPay.Models.AmazonPayViewModel
 @{
-    Layout = "_Checkout";
+	Layout = "_Checkout";
 
-    Html.AddTitleParts(T("PageTitle.Checkout").Text);
+	Html.AddTitleParts(T("PageTitle.Checkout").Text);
+	Html.AddCssFileParts(true, Url.Content("~/Plugins/SmartStore.AmazonPay/Content/SmartStore.AmazonPay.css"));
 }
 
 @section orderProgress{
@@ -24,7 +25,7 @@
         }
 
 		<div class="amazon-pay-widget clearfix">
-			<div id="@Model.WidgetId"></div>
+			<div id="amazon-pay-address-book-widget"></div>
 		</div>
 
 		@{ Html.RenderWidget("checkout_shipping_address_middle"); }
@@ -66,13 +67,12 @@
 					$('#AmazonPayNextCheckoutStep').fadeIn();
 				},
 				design: {
-					designMode: 'responsive',
-					size: { width: '@(Model.AddressWidgetWidth)px', height: '@(Model.AddressWidgetHeight)px' }
+					designMode: 'responsive'
 				},
 				onError: function (e) {
 					alert(e.getErrorMessage() + ' (' + e.getErrorCode() + ')');
 				}
-			}).bind('@Model.WidgetId');
+			}).bind('amazon-pay-address-book-widget');
 		}
 		catch (e) {
 			console.log(e);
