--- a/src/Plugins/SmartStore.AmazonPay/Views/AmazonPay/AuthenticationPublicInfo.cshtml
+++ b/src/Plugins/SmartStore.AmazonPay/Views/AmazonPay/AuthenticationPublicInfo.cshtml
@@ -5,7 +5,7 @@
 @if (Model.SellerId.HasValue())
 {
 	<div class="amazon-pay-button" style="display: flex; align-items: center; height: 100%;">
-		<div id="@Model.WidgetId"></div>
+		<div id="amazon-pay-auth-button"></div>
 	</div>
 
 	Html.RenderPartial("ScriptingLoginButton", Model);
