--- a/src/Plugins/SmartStore.AmazonPay/Views/Shared/ScriptingLoginButton.cshtml
+++ b/src/Plugins/SmartStore.AmazonPay/Views/Shared/ScriptingLoginButton.cshtml
@@ -31,7 +31,7 @@
 				scope += ' payments:widget payments:shipping_address payments:billing_address';
 			}
 
-			OffAmazonPayments.Button('@Html.Raw(Model.WidgetId)', '@Html.Raw(Model.SellerId)', {
+			OffAmazonPayments.Button(isAuthentication ? 'amazon-pay-auth-button' : 'amazon-pay-login-button', '@Html.Raw(Model.SellerId)', {
 				type: '@(Model.ButtonType ?? (Model.Type == AmazonPayRequestType.AuthenticationPublicInfo ? "Login" : "PwA"))',
 				color: '@(Model.ButtonColor ?? "Gold")',
 				size:  '@(Model.ButtonSize ?? "small")',
@@ -43,8 +43,11 @@
 						},
 						function (authorizeResponse) {
 							accessToken = authorizeResponse.access_token;
-							handlerUrl += '&accessToken=' + encodeURIComponent(accessToken);
-							window.location = handlerUrl;
+
+							if (isAuthentication) {
+								handlerUrl += 'accessToken=' + encodeURIComponent(accessToken);
+								window.location = handlerUrl;
+							}
 						}
 					);
 				},
