Apply img-fluid class to all images within html editor content

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_core.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_core.scss
@@ -115,6 +115,12 @@
     }
 }
 
+// apply img-fluid to all images within html editor content 
+.html-editor-content img {
+    max-width: 100%;
+    height: auto;
+}
+
 
 //
 // Bootstrap overrides and tweaks
