AmazonPay: Minor changes

--- a/src/Plugins/SmartStore.AmazonPay/Views/AmazonPay/Configure.cshtml
+++ b/src/Plugins/SmartStore.AmazonPay/Views/AmazonPay/Configure.cshtml
@@ -381,9 +381,9 @@
 	</table>
 }
 
-@* Must not be the first form. *@
+@* Must not be the first form in this view. *@
 <form id="register-now-form" method="POST" action="@Model.RegisterUrl" target="_blank">
-	<input type="hidden" name="spId" value="@Model.PlatformId" />
+	<input type="hidden" name="spId" value="SPEXDEAPA-SmartStore.Net-CP-DP" />
 	<input type="hidden" name="publicKey" value="@Model.PublicKey" />
 	<input type="hidden" name="keyShareURL" value="@Model.KeyShareUrl" />
 	<input type="hidden" name="locale" value="@Model.LanguageLocale" />
