--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
@@ -235,6 +235,15 @@
         </tr>
         <tr>
             <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.ApplyTierPricePercentageToAttributePriceAdjustments)
+            </td>
+            <td class="adminData">
+                @Html.SettingEditorFor(model => model.ApplyTierPricePercentageToAttributePriceAdjustments)
+                @Html.ValidationMessageFor(model => model.ApplyTierPricePercentageToAttributePriceAdjustments)
+            </td>
+        </tr>
+        <tr>
+            <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.IgnoreFeaturedProducts)
             </td>
             <td class="adminData">
