Minor mobile device bugfix for firefox

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_menu.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_menu.scss
@@ -266,7 +266,7 @@ $ocm-selected-color:                    $brand-warning;
     }
 
     .dropdown-menu {
-        position: relative;
+        position: static;
         float: initial;
         min-width: initial;
         padding: initial;
