More work on admin theme

--- a/src/Presentation/SmartStore.Web/Administration/Content/_legacy.scss
+++ b/src/Presentation/SmartStore.Web/Administration/Content/_legacy.scss
@@ -1,4 +1,4 @@
-/// <reference path="../Content/bs4/scss/bootstrap.scss" />
+/// <reference path="../../Content/bs4/scss/bootstrap.scss" />
 
 
 /* Variabe shims
