--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_megamenu.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_megamenu.scss
@@ -2,10 +2,25 @@
 /// <reference path="bs4/scss/bootstrap.scss" />
 
 $megamenu-zindex-base:          ($zindex-dropdown - 20);
-$megamenu-bg:                   mix(rgb(red($megamenu-bg), green($megamenu-bg), blue($megamenu-bg)), #fff, alpha($megamenu-bg) * 100%);
+$color-layers:                  $megamenu-bg $header-bg $site-bg $body-bg;
+$mixed-megamenu-bg:             $megamenu-bg;
+
+@each $color in $color-layers {
+    $i: index($color-layers, $color);
+
+    $next-color: $color;
+
+    @if length($color-layers) < $i  {
+        $next-color: nth($color-layers, $i + 1);    
+    }    
+    
+    @if (alpha($next-color) < 1 and $next-color != transparent)  {
+        $mixed-megamenu-bg: mix(rgba($color, 1), rgba($next-color, 1), alpha($color) * 100%);
+    }
+}
 
 .megamenu-section .navbar {
-    background: $megamenu-bg;
+    background: $mixed-megamenu-bg;
     padding: 0; 
 }
 
@@ -161,10 +176,10 @@ $megamenu-bg:                   mix(rgb(red($megamenu-bg), green($megamenu-bg), 
     display: block;
 }
 .megamenu .megamenu-nav--prev .megamenu-nav-btn {
-    background-image: linear-gradient(to left, rgba($megamenu-bg, 0), $megamenu-bg 40%, $megamenu-bg 100%);
+    background-image: linear-gradient(to left, rgba($mixed-megamenu-bg, 0), $mixed-megamenu-bg 40%, $mixed-megamenu-bg 100%);
 }
 .megamenu .megamenu-nav--next .megamenu-nav-btn {
-    background-image: linear-gradient(to right, rgba($megamenu-bg, 0), $megamenu-bg 40%, $megamenu-bg 100%);
+    background-image: linear-gradient(to right, rgba($mixed-megamenu-bg, 0), $mixed-megamenu-bg 40%, $mixed-megamenu-bg 100%);
 }
 
 .touchevents .megamenu-section .navbar:hover .show-scroll-buttons .megamenu-nav-btn i,
