Empty columns in megamenu dropdown should be resized to 0 so background images are clickable

--- a/src/Presentation/SmartStore.Web/Themes/Flex/Content/_megamenu.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Flex/Content/_megamenu.scss
@@ -246,6 +246,7 @@ $mixed-megamenu-bg:             $megamenu-bg;
         .col-md-3 {
             overflow: hidden;
         }
+        .row > div:empty { height: 0; }
     }
 
     .mega-menu-dropdown-heading {
